# simple_profiler

./: CMakeLists.txt  LICENSE  main.c
inc/: porfiler_settings.h  profiler.h  profiler_interface_provider.h
src/: profiler.c  profiler_interface_provider.c
